force-app/main/default/objects/RTL_Household__c/RTL_Household__c.object-meta.xml
<CustomObject>
    <label>Household</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Household Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Households</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>