force-app/main/default/objects/RTL_Household__c/fields/Count_Pending_Household_History__c.field-meta.xml
<CustomField>
    <fullName>Count_Pending_Household_History__c</fullName>
    <label>Count Pending Household History</label>
    <summaryFilterItems>
        <field>RTL_Household_History_and_Approval__c.RTL_Outcome__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </summaryFilterItems>
    <summaryForeignKey>RTL_Household_History_and_Approval__c.RTL_Household__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>