force-app/main/default/objects/RTL_Household__c/fields/Primary_Cust_ID__c.field-meta.xml
<CustomField>
    <fullName>Primary_Cust_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary Cust ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>