force-app/main/default/objects/RTL_Household__c/fields/RTL_Approver_Link__c.field-meta.xml
<CustomField>
    <fullName>RTL_Approver_Link__c</fullName>
    <description>For Reports</description>
    <formula>HYPERLINK(&quot;javascript:srcUp(&apos;/&quot;&amp;RTL_RM__r.ManagerId&amp;&quot;&apos;)&quot;, RTL_Approver_UserName__c)</formula>
    <label>Approver</label>
    <type>Text</type>
</CustomField>