force-app/main/default/objects/RTL_Household__c/fields/RTL_Approver_UserName__c.field-meta.xml
<CustomField>
    <fullName>RTL_Approver_UserName__c</fullName>
    <description>Username of Approver</description>
    <formula>RTL_RM__r.Manager.FirstName + &quot; &quot; + RTL_RM__r.Manager.LastName</formula>
    <label>Approver</label>
    <type>Text</type>
</CustomField>