force-app/main/default/objects/RTL_Household__c/fields/RTL_Benefit_Package__c.field-meta.xml
<CustomField>
    <fullName>RTL_Benefit_Package__c</fullName>
    <description>Benefit Package the Primary Household Member is entitled to</description>
    <label>Benefit Package</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wealth Package 1</fullName>
            </value>
            <value>
                <fullName>Wealth Package 2</fullName>
            </value>
            <value>
                <fullName>Wealth Package 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>