force-app/main/default/objects/RTL_Household__c/fields/RTL_Number_of_Approved_Primary_Members__c.field-meta.xml
<CustomField>
    <fullName>RTL_Number_of_Approved_Primary_Members__c</fullName>
    <description>Total number of approved primary members for validation</description>
    <label>Number of Approved Primary Members</label>
    <summaryFilterItems>
        <field>RTL_Household_Member__c.RTL_Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>RTL_Household_Member__c.RTL_Primary__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>RTL_Household_Member__c.RTL_Household__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>