force-app/main/default/objects/RTL_Household__c/fields/RTL_Number_of_Members__c.field-meta.xml
<CustomField>
    <fullName>RTL_Number_of_Members__c</fullName>
    <description>Number of Members in this Household</description>
    <label>Number of Members</label>
    <summaryFilterItems>
        <field>RTL_Household_Member__c.RTL_Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>RTL_Household_Member__c.RTL_Household__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>