force-app/main/default/objects/RTL_Household__c/fields/RTL_Remarks__c.field-meta.xml
<CustomField>
    <fullName>RTL_Remarks__c</fullName>
    <description>Remarks for this Household</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Remarks</label>
    <type>TextArea</type>
</CustomField>