force-app/main/default/objects/RTL_Household__c/fields/RTL_Remarks_Length__c.field-meta.xml
<CustomField>
    <fullName>RTL_Remarks_Length__c</fullName>
    <description>Length of Remarks used for workflow purposes</description>
    <formula>LEN( RTL_Remarks__c)</formula>
    <label>Remarks Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>