force-app/main/default/objects/RTL_Household__c/fields/RTL_RM__c.field-meta.xml
<CustomField>
    <fullName>RTL_RM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relationship Manager for this Household</description>
    <label>RM/BM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Households</relationshipName>
    <type>Lookup</type>
</CustomField>