force-app/main/default/objects/RTL_Household__c/fields/RTL_RM_Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>RTL_RM_Employee_ID__c</fullName>
    <description>Employee ID of RM for this Household</description>
    <formula>RTL_RM__r.Employee_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RM Employee ID</label>
    <type>Text</type>
</CustomField>