force-app/main/default/objects/RTL_Household__c/fields/RTL_To_Delete__c.field-meta.xml
<CustomField>
    <fullName>RTL_To_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Soft delete</description>
    <label>Delete Household</label>
    <type>Checkbox</type>
</CustomField>