force-app/main/default/objects/RTL_Household__c/validationRules/RTL_Benefit_Must_Be_Selected.validationRule-meta.xml
<ValidationRule>
    <fullName>RTL_Benefit_Must_Be_Selected</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNEW(),  ISPICKVAL(RTL_Benefit_Package__c,&quot;&quot;) )</errorConditionFormula>
    <errorMessage>Benefit Package must be selected!</errorMessage>
</ValidationRule>