force-app/main/default/objects/RTL_Household__c/validationRules/RTL_No_Primary_Member.validationRule-meta.xml
<ValidationRule>
    <fullName>RTL_No_Primary_Member</fullName>
    <active>true</active>
    <description>Member is Approved without Household/Primary Member Approval</description>
    <errorConditionFormula>AND((RTL_Number_of_Approved_Primary_Members__c = 0), 
(RTL_Number_of_Approved_Members__c &gt; 0) 
)</errorConditionFormula>
    <errorMessage>Member is Approved without Household/Primary Member Approval</errorMessage>
</ValidationRule>