force-app/main/default/objects/RTL_Household__c/validationRules/RTL_Only_One_Primary.validationRule-meta.xml
<ValidationRule>
    <fullName>RTL_Only_One_Primary</fullName>
    <active>true</active>
    <errorConditionFormula>RTL_Number_of_Primary_Members__c &gt; 1</errorConditionFormula>
    <errorMessage>Only 1 member can be indicated as Primary</errorMessage>
</ValidationRule>