force-app/main/default/objects/RTL_Household__c/validationRules/RTL_Remarks_Length_Too_Long.validationRule-meta.xml
<ValidationRule>
    <fullName>RTL_Remarks_Length_Too_Long</fullName>
    <active>true</active>
    <errorConditionFormula>LEN( RTL_Remarks__c ) &gt; 255</errorConditionFormula>
    <errorMessage>Remarks cannot be longer than 255 characters</errorMessage>
</ValidationRule>